Change loader background #84, Fix Layout bug in the "Most active pair of zones" block #82

--- a/src/pages/Map/components/Leaderboard/index.module.css
+++ b/src/pages/Map/components/Leaderboard/index.module.css
@@ -199,8 +199,9 @@
 /*7 col*/
 .header.ibcReceived,
 .cell.ibcReceived {
-  width: 110px;
-  min-width: 110px;
+  width: 120px;
+  min-width: 120px;
+  max-width: 120px;
   border-right: 1px solid var(--table-borders-color);
 }
 
